--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,11 +5,11 @@
 
 name: $(Version.Major).$(Version.Minor).$(Version.Patch)
 
-# trigger:
-#  batch: true
-#  branches:
-#    include:
-#      - master
+trigger:
+  batch: true
+  branches:
+    include:
+      - master
 
 pool:
   vmImage: ubuntu-latest
